# MElCalc

./: .gitignore  CMakeLists.txt  MElCalcConfig.cmake.in  README.md  sme-generator.sh.in
inc/: MElCalculator.h
include/: MElCalc.h  MElCalc.hpp
src/: MElCalc.cpp  MElCalculator.cpp
